proposals chart data
