# api/api.go
@@ -111,6 +111,7 @@ func (api *API) loadRoutes() {
 		{Path: "/proposals", Method: http.MethodGet, Func: api.GetProposals},
 		{Path: "/proposals/votes", Method: http.MethodGet, Func: api.GetProposalVotes},
 		{Path: "/proposals/deposits", Method: http.MethodGet, Func: api.GetProposalDeposits},
+		{Path: "/proposals/chart", Method: http.MethodGet, Func: api.GetProposalChartData},
 	})
 
 }
